# cosmopp_neutrinos

./: .gitignore  CMakeLists.txt  bao_like.hpp  combined_like.hpp  compile_file.sh  cosmo.hpp  cosmo_class2.4.5.hpp  cosmo_likelihood.hpp  lrgdr7_like.hpp  neutrino_cosmology_params.hpp  run_bao_like.cpp  test_bao_MC.cpp  wigglez_like.hpp
examples/: CMakeLists.txt  cmake_settings.txt  compile_file.sh  example_mh.cpp  example_mh_chain.cpp  example_mn_planck.cpp  mcmc_cholesky_matrix.txt  mcmc_covariance_matrix.txt  mn_scan.cpp
examples/example_files/: metropolis_hastings.paramnames  metropolis_hastings.txt
results/wmap+LRG_LCDM/: CMakeLists.txt  analyze_MC.cpp  param_compare.txt  wmap+lrg_mh_param0.txt  wmap+lrg_mh_param1.txt  wmap+lrg_mh_param2.txt  wmap+lrg_mh_param3.txt  wmap+lrg_mh_param4.txt  wmap+lrg_mh_param5.txt  wmap+lrg_mh_param_limits.txt
runs/: .run_combined_like.cpp.swp  CMakeLists.txt  plot_histograms.py  run_LCDM_mn.cpp  run_combined_like.cpp  run_knotted.cpp  run_knotted.sh  run_knotted_MCMC.cpp  run_knotted_mn.cpp  run_knotted_nu_mn.cpp  run_lrg_like.cpp  run_planck+BAO_like.cpp  run_planck+lrg_mn_like.cpp  run_planck_like.cpp  run_standard.cpp  run_standard_mn.cpp  run_wmap+lrg_like.cpp
runs/LCDM_bao_mn/: CMakeCache.txt  LCDM_planck_bao.txt  LCDM_planck_baoIS.iterinfo  LCDM_planck_baoIS.points  LCDM_planck_baoIS.ptprob  LCDM_planck_baolive.points  LCDM_planck_baoparameter_constraints.txt  LCDM_planck_baophys_live.points  LCDM_planck_baoposterior.txt  LCDM_planck_baosummary.txt  Makefile  cmake_install.cmake  cosmo_pk.txt  empty_sample_module.mod
runs/LCDM_planck_2_build/: CMakeCache.txt  LCDM_planck_.txt  LCDM_planck_IS.iterinfo  LCDM_planck_IS.points  LCDM_planck_IS.ptprob  LCDM_planck_live.points  LCDM_planck_parameter_constraints.txt  LCDM_planck_phys_live.points  LCDM_planck_posterior.txt  LCDM_planck_summary.txt  Makefile  cmake_install.cmake  cmb_error_log.txt  cosmo_pk.txt  run_LCDM_mn
runs/LCDM_wigglez_mn/: CMakeCache.txt  LCDM_planck_wigglezlive.points  LCDM_planck_wigglezphys_live.points  Makefile  cosmo_pk.txt
runs/LCDM_wmap_lrg_mn_build/: CMakeCache.txt  LCDM_wmap_lrg_.paramnames  LCDM_wmap_lrg_.txt  LCDM_wmap_lrg_IS.iterinfo  LCDM_wmap_lrg_IS.points  LCDM_wmap_lrg_IS.ptprob  LCDM_wmap_lrg_live.points  LCDM_wmap_lrg_parameter_constraints.txt  LCDM_wmap_lrg_phys_live.points  LCDM_wmap_lrg_posterior.txt  LCDM_wmap_lrg_summary.txt  Makefile  cmake_install.cmake  cosmo_pk.txt  empty_sample_module.mod  run_LCDM_mn
runs/knotted_bao_mcmc_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk_0.txt  cosmo_pk_1.txt  empty_sample_module.mod  knotted_linear_2_planck_bao_0.txt  knotted_linear_2_planck_bao_1.txt  run_knotted_MCMC
runs/knotted_linear_0_Mnu_nEff_lrg_mn_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk.txt  knotted_linear_0_neff_summnu_planck_lrg_.txt  knotted_linear_0_neff_summnu_planck_lrg_IS.iterinfo  knotted_linear_0_neff_summnu_planck_lrg_IS.points  knotted_linear_0_neff_summnu_planck_lrg_IS.ptprob  knotted_linear_0_neff_summnu_planck_lrg_live.points  knotted_linear_0_neff_summnu_planck_lrg_parameter_constraints.txt  knotted_linear_0_neff_summnu_planck_lrg_phys_live.points  knotted_linear_0_neff_summnu_planck_lrg_posterior.txt  knotted_linear_0_neff_summnu_planck_lrg_summary.txt
runs/knotted_mcmc_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk_0.txt  cosmo_pk_1.txt  empty_sample_module.mod  knotted_linear_2_planck_0.txt  knotted_linear_2_planck_1.txt  knotted_linear_2_planck_bao__0.txt  knotted_linear_2_planck_bao__1.txt  knotted_linear_2_planck_lrg_.paramnames  log_0_of_2.txt  mcmc_cholesky_matrix.txt  mcmc_covariance_matrix.txt  run_knotted_MCMC
runs/knotted_mn_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk.txt  empty_sample_module.mod  knotted_linear_2_planckIS.iterinfo  knotted_linear_2_planckIS.points  knotted_linear_2_planckIS.ptprob  knotted_linear_2_plancklive.points  knotted_linear_2_planckphys_live.points  run_knotted_mn
runs/knotted_planck+lrg_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk.txt  empty_sample_module.mod  knotted_linear_1_planck_lrg.paramnames  run_knotted
runs/knotted_planck_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmb_error_log.txt  cosmo_pk.txt  empty_sample_module.mod  knotted_linear_1_planck.txt  knotted_linear_1_planckIS.iterinfo  knotted_linear_1_planckIS.ptprob  knotted_linear_1_plancklive.points  knotted_linear_1_planckparameter_constraints.txt  knotted_linear_1_planckphys_live.points  knotted_linear_1_planckposterior.txt  knotted_linear_1_plancksummary.txt  run_knotted
runs/lrg_LCDM_build/: CMakeCache.txt  Makefile  cmake_install.cmake  log_0_of_1.txt  lrg_mh.txt  mcmc_cholesky_matrix.txt  mcmc_covariance_matrix.txt  run_lrg_like
runs/planck+BAO_LCDM_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk_0.txt  cosmo_pk_1.txt  cosmo_pk_2.txt  cosmo_pk_3.txt  log_0_of_4.txt  mcmc_cholesky_matrix.txt  mcmc_covariance_matrix.txt  planck+bao_mh.paramnames  planck+bao_mh_0.txt  planck+bao_mh_1.txt  planck+bao_mh_2.txt  planck+bao_mh_3.txt  run_combined_like
runs/planck+BAO_LCDMwithLinearSpline_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cosmo_pk_0.txt  cosmo_pk_1.txt  cosmo_pk_2.txt  log_0_of_3.txt  mcmc_cholesky_matrix.txt  mcmc_covariance_matrix.txt  planck+bao_mh.paramnames  planck+bao_mh_0.txt  planck+bao_mh_1.txt  planck+bao_mh_2.txt  run_planck+BAO_like
runs/planck+BAO_LCDMwithNeutrinos_10chains_build_fail/: CMakeCache.txt  Makefile  cmake_install.cmake  cmb_error_log.txt  cosmo_pk_0.txt  (+23 more)
tests/: .CMakeLists.txt.swp  .test_ps.cpp.swp  CMakeLists.txt  P_lrg.txt  P_lrg_nu.txt  Ps.txt  Untitled0.ipynb  bad_pars.txt  bao_boss_like.py  count_badhalofit.py  learn_matrix.cpp  sz_clusters_output.txt  test_LRGHaloPs.cpp  test_bao_like.cpp  test_combined_like.cpp  test_knotted_nu_mn.cpp  test_knotted_planck_mn.cpp  test_lrgdr7_like.cpp  test_nonlinear.cpp  test_planck+BAO_like.cpp  test_ps.cpp  test_sigma8.cpp  test_sz_clusters.py  test_wigglez_like.cpp  test_wmap_like.cpp
(+531 files in other folders)
